# OpenGL_training

./: .gitignore  AllBuild.py  CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp  buildLinux.sh  buildWindows.sh  conanfile.txt  diamond.cpp  diamond.hpp  downGLM.py  downStbImage.py  main.cpp  rectangle.cpp  rectangle.hpp
include/: Shader.hpp  debugHelper.hpp
resources/shaders/: shaders.shader
shaders/: fragmentShader.frag  vertexShader.vert
src/: Shader.cpp  debugHelper.cpp
